# C_Aufgaben

./: 10_calender_stuff.c  11_pythagoras_triplet.c  12_prime_numbers.c  2_tempertatur.c  3_3_last_number.c  3_resistance.c  7_calculate_dont_think.c  8_pi.c  CMakeLists.txt  game_of_live.c  helper.h  main.c
1/: 10_calender_stuff.c  11_pythagoras_triplet.c  12_prime_numbers.c  1_circle.c  2_temperature.c  3_1_sum_product_difference_quotient.c  3_2_read_char.c  3_3_last_number.c  3_resistance.c  4_numerical_representation.c  5_e.c  6_triangle_of_numbers.c  7_calculate_dont_think.c  8_pi.c  9_multiplication_table.c
2/: 10_root.c  11_ackermann.c  12_fibonacci.c  13_number_pyramid.c  14_ggt.c  1_inverter.c  2_prime_number.c  3_bit_pattern.c  4_5_bubble_sort_selection_sort.c  6_prime_factor.c  7_stairs.c  8_base_64.c  9_palindrom.c  deactivated_8_base64.c  helper.h
3/: 10_idex_of.c  11_equals.c  12_remove_doublets.c  13_bubble_sort.c  14_gauss.c  1_swap.c  2_matricies.c  3_print_matrix.c  4_dot_product.c  5_transposed.c  6_determinant.c  7_turn_string.c  8_count_words.c  9_replace.c
4/: 1-9_person.c  10-11_linked_list.c  12_dynamic_allocation.c  13_function_pointers.c  14_binary_tree.c  15_hash_table.cpp
4_extra/: 1_shipping_costs.c
project/: project.c
